# operations-intelligence-hub

./: LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/: executive_brief.md  executive_kpi_snapshot.json  executive_summary.html  root_cause_summary.csv
data/: sample_metrics.csv  sample_sales.csv
data/processed/: network_alerts.csv  site_performance_scorecard.csv
data/raw/: quality_incidents.csv  site_dimension.csv
docs/: architecture.md  dashboard-design.md  dashboard_build_guide.md  kpi_framework.md
powerbi/: README.md  dashboard.pbix  dashboard_blueprint.md  dashboard_preview.html  dataset.metadata.json  measures.dax  report.metadata.json  semantic_model.json  theme.json
scripts/: generate_operations_data.py  prepare_dataset.py
src/operations_intelligence_hub/: __init__.py  cli.py  config.py  data_generation.py  reporting.py
tests/: test_operations_intelligence_smoke.py
