[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operations-intelligence-hub"
version = "0.1.0"
description = "Executive-grade operations intelligence project with synthetic network telemetry and Power BI delivery assets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.scripts]
operations-intelligence-hub = "operations_intelligence_hub.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
